--- a/nighttheme.css
+++ b/nighttheme.css
@@ -1,9 +1,10 @@
 body {
-  background-color: black;
+  background-color: rgb(15, 15, 15);
   color: white;
 }
 .card {
   border-radius: 20px;
+  margin-top: 30px;
 }
 div.card {
   background-color: gray;
