--- a/style.css
+++ b/style.css
@@ -3,13 +3,14 @@ body {
   }
 .card {
   border-radius: 20px;
+  margin-top: 30px;
 }
 div.card {
   background-color: whitesmoke;
 }
 .btn {
-  background-color: whitesmoke;
-  color: gray;
+  background-color: rgb(223, 223, 223);
+  color: black;
 }
 input {
   text-align: right;
