--- a/nighttheme.css
+++ b/nighttheme.css
@@ -6,7 +6,7 @@ body {
   border-radius: 20px;
 }
 div.card {
-  background-color: gray;
+  background-color: rgb(88, 88, 88);
   margin-top: 30px;
 }
 .btn {
@@ -27,6 +27,20 @@ img {
   filter: invert(1);
 }
 div.input-group-append {
-    width: 50px;
-  }
-  
+  width: 50px;
+}
+button.btn-lg {
+  height: 8vw+10px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Lucida Console", "Courier New", monospace;
+  max-height: 100px;
+  border-color: rgb(0, 0, 0);
+  border-radius: 20px;
+  background-color: rgb(88, 88, 88);
+}
+span {
+  color: white;
+  font-size: min(8vw, 60px);
+  text-align: center;
+}
