--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body {
-    background-color: whitesmoke;
-  }
+  background-color: rgb(255, 255, 255);
+}
 .card {
   border-radius: 20px;
 }
 div.card {
   background-color: whitesmoke;
   margin-top: 30px;
+  border-color: rgb(0, 0, 0);
 }
 .btn {
-  background-color: rgb(223, 223, 223);
+  background-color: rgb(245, 245, 245);
   color: black;
 }
 input {
@@ -23,4 +24,18 @@ h2 {
 }
 div.input-group-append {
   width: 50px;
+}
+button.btn-lg {
+  height: 8vw+10px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Lucida Console", "Courier New", monospace;
+  max-height: 100px;
+  border-color: rgb(0, 0, 0);
+  border-radius: 20px;
+}
+span {
+  color: black;
+  font-size: min(8vw, 60px);
+  text-align: center;
 }
