--- a/nighttheme.css
+++ b/nighttheme.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgb(15, 15, 15);
   color: white;
+  background: url(Images/Background-dark.jpg) no-repeat center fixed;
 }
 .card {
   border-radius: 20px;
@@ -30,6 +31,7 @@ div.input-group-append {
   width: 50px;
 }
 button.btn-lg {
+  margin-top: 15px;
   height: 8vw+10px;
   text-align: center;
   font-size: 20px;
@@ -38,6 +40,7 @@ button.btn-lg {
   border-color: rgb(0, 0, 0);
   border-radius: 20px;
   background-color: rgb(88, 88, 88);
+  font-weight: bold;
 }
 span {
   color: white;
