--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(255, 255, 255);
+  background: url(Images/Background.jpg) no-repeat center fixed;
 }
 .card {
   border-radius: 20px;
@@ -26,6 +27,7 @@ div.input-group-append {
   width: 50px;
 }
 button.btn-lg {
+  margin-top: 15px;
   height: 8vw+10px;
   text-align: center;
   font-size: 20px;
@@ -33,6 +35,7 @@ button.btn-lg {
   max-height: 100px;
   border-color: rgb(0, 0, 0);
   border-radius: 20px;
+  font-weight: bold;
 }
 span {
   color: black;
