--- a/nighttheme.css
+++ b/nighttheme.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(15, 15, 15);
   color: white;
-  background: url(Images/Background-dark.jpg) no-repeat center fixed;
+  background: url(Images/Background-dark.jpg) repeat center fixed;
 }
 .card {
   border-radius: 20px;
